alignment issues

--- a/src/containers/homework/student-homework/studentSide.scss
+++ b/src/containers/homework/student-homework/studentSide.scss
@@ -4,6 +4,8 @@
   border: 1px solid #d5d5d5;
   margin: 0px !important;
   height: 70px;
+  max-width: 210px;
+  width: 210px;
 }
 .ant-tabs-tab-btn{
   width: 100%;
